# acav

./: .dockerignore  .gitignore  ACAV_USER_MANUAL.md  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DOCKER_IMAGE_README.md  Dockerfile.release  Gemfile  INSTALL.txt  KNOWN_ISSUES.md  NOTICE.txt  README.md  _config.yml  index.md
.github/workflows/: ci.yml  deploy-manual.yml  release-image.yml
app/: CMakeLists.txt  main.cpp  resources.qrc
app/core/: AcavAstBuilder.cpp  AppConfig.cpp  AstExtractorRunner.cpp  AstNode.cpp  MakeAstRunner.cpp  MemoryProfiler.cpp  ParallelProcessRunner.cpp  QueryDependenciesParallelRunner.cpp  QueryDependenciesRunner.cpp  SourceLocation.cpp  SourceLocationIndex.cpp
app/include/: Version.h.in
app/include/core/: AcavAstBuilder.h  AppConfig.h  AstExtractorRunner.h  AstNode.h  LogEntry.h  MakeAstRunner.h  MemoryProfiler.h  ParallelProcessRunner.h  ProcessLogParser.h  ProcessOutputUtils.h  QueryDependenciesParallelRunner.h  QueryDependenciesRunner.h  SourceLocation.h  SourceLocationIndex.h
app/include/ui/: AstModel.h  CppSyntaxHighlighter.h  DeclContextView.h  DockTitleBar.h  LineNumberArea.h  LogDock.h  MainWindow.h  NodeCycleWidget.h  NodeDetailsDialog.h  OpenProjectDialog.h  SourceCodeView.h  TranslationUnitModel.h
app/resources/: style.qss
app/ui/: AstModel.cpp  CppSyntaxHighlighter.cpp  DeclContextView.cpp  DockTitleBar.cpp  LineNumberArea.cpp  LogDock.cpp  MainWindow.cpp  NodeCycleWidget.cpp  NodeDetailsDialog.cpp  OpenProjectDialog.cpp  SourceCodeView.cpp  TranslationUnitModel.cpp
assets/css/: style.scss
cmake/: AcavGlobalList.cmake
common/: CMakeLists.txt  ClangUtils.cpp  FileManager.cpp  InternedString.cpp
docker/examples/: calculator.cpp  calculator.hpp
docs/: Doxyfile.in  DoxygenLayout.xml  llvm-clang-upgrade-guide.md
docs/manual/: index.md  license.md  manual.css  notice.md  references.md
include/common/: ClangUtils.h  Config.h.in  DependencyTypes.h  DiagnosticLogFormat.h  FileManager.h  InternedString.h
make-ast/: CMakeLists.txt  MakeAst.cpp
query-dependencies/: CMakeLists.txt  QueryDependencies.cpp
scripts/: build.sh  package-release.sh  print_desktop_options  run_acav_container.sh  run_demo
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/advancedcpp/: CMakeLists.txt
test/advancedcpp/crtp/: CMakeLists.txt  comparable.cpp  concepts.cpp  sfinae.cpp  traits.cpp
test/advancedcpp/modules/: CMakeLists.txt  math.cppm  math_impl.cpp  math_main.cpp  math_mul.cppm
test/data/: CMakeLists.txt  all_in_one.cpp  foo.cpp  foo.hpp
test/macro_namespace/: CMakeLists.txt  macro_namespace.cpp  macro_namespace.h
test/make-ast/: basic.test  response_file.test  with_user_header.test
test/make-ast/Inputs/: compile_flags.rsp  nested_header_level2.h  response_file.cpp  response_file_compdb.json  simple.cpp  simple_compdb.json  user_header.h  user_only_header1.h  user_only_main.cpp  with_header.cpp  with_header.h  with_header_compdb.json  with_user_header.cpp
test/query-dependencies/: basic.test  deduplication.test  nested.test  nested_includes.test  simple.test  user_only.test
test/query-dependencies/Inputs/: nested_compdb.json  nested_header_level1.h  nested_includes.cpp  simple.cpp  simple_compdb.json  user_only_compdb.json  user_only_header2.h  with_user_header_compdb.json
unittests/: CMakeLists.txt
unittests/app/: AstExtractorRunnerTests.cpp  AstModelTests.cpp  AstNodeTests.cpp  CMakeLists.txt  MainWindowAstCacheRecoveryTests.cpp  PropertyExtractionTests.cpp  SourceCodeViewTests.cpp  TestMain.cpp  TranslationUnitModelTests.cpp  UIUXTests.cpp
unittests/common/: CMakeLists.txt  ClangUtilsToolchainTest.cpp  FileManagerTest.cpp  InternedStringJsonTest.cpp  InternedStringTest.cpp
unittests/make-ast/: AstCacheTest.cpp  CMakeLists.txt
unittests/query-dependencies/: CMakeLists.txt  DependencyParserTest.cpp
